@@ -106,4 +106,23 @@
   if (!is.null(logical)) {
     if (debug) mdebugf("Option 'parallelly.availableCores.logical = %s", logical)
   }
+
+  ## Unless already set, set option 'parallelly.availableCores.reserve'
+  ## according to environment variable 'R_PARALLELLY_AVAILABLECORES_RESERVE'.
+  reserve <- getOption2("parallelly.availableCores.reserve")
+  if (is.null(reserve)) {
+    reserve <- trim(getEnvVar2("R_PARALLELLY_AVAILABLECORES_RESERVE", ""))
+    if (nzchar(reserve)) {
+      if (debug) mdebugf("R_PARALLELLY_AVAILABLECORES_RESERVE=%s", sQuote(reserve))
+      if (!is.element(reserve, c("NA_integer_", "NA"))) {
+        reserve <- as.integer(reserve)
+        if (debug) mdebugf(" => options(parallelly.availableCores.reserve = %d)", reserve)
+        options(parallelly.availableCores.reserve = reserve)
+      }
+    }
+    reserve <- getOption2("parallelly.availableCores.reserve", NULL)
+  }
+  if (!is.null(reserve)) {
+    if (debug) mdebugf("Option 'parallelly.availableCores.reserve = %d", reserve)
+  }
 }
