@@ -13,6 +13,16 @@ SIGNIFICANT CHANGES:
    from using reverse tunneling over SSH.  It turns out the bug reveals itself
    when using hostname 'localhost' but not '127.0.0.1'.
    
+NEW FEATURES:
+   
+ * availableCores() gained argument 'reserve' to make it easier to put aside
+   zero or more cores from being used in parallel processing.  For example,
+   on a system with four cores, availableCores(reserve = 1) returns 3.
+   Importantly, since availableCores() is guaranteed to always return a
+   positive integer, availableCores(reserve = 4) == 1, even on systems with
+   four or fewer cores.  Using availableCores() - 4 on such systems would
+   return a non-positive value, which would give an error downstreams.
+   
 
 Version: 1.24.0 [2021-03-12]
 
